Updates from Overleaf

--- a/LP_LoideConservation.tex
+++ b/LP_LoideConservation.tex
@@ -14,12 +14,16 @@
   \hline 
   Titre & Auteurs & Editeur (année) & ISBN \\
   \hline
+  Mécanique 1 & H. Gié et J.-P. Sarmant & Tec\&Doc (1984) & \\
+  \hline
+  Mécanique 2ème année & H. Gié et J.-P. Sarmant & Tec\&Doc (1996) & \\
+  \hline
 \end{tabularx}
 \end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{reportBlock}{Plan détaillé}
-  \textbf{Niveau choisi pour la leçon :} 
+  \textbf{Niveau choisi pour la leçon :} CPGE 2ème année
   \newline
   \textbf{Prérequis : }
   \newline
