--- a/Leçon_chimie/LC_Avancement.tex
+++ b/Leçon_chimie/LC_Avancement.tex
@@ -109,6 +109,14 @@ Code couleur pour les manips :\\
   \hline
   \textbf{Chimie et alimentation} & Teneur en vitamine C d'un aliment/médicament & \textcolor{red}{0\%} & Terminale ST2S \\
   \hline
+  \textbf{Contrôle qualité de l'eau et de l'air} & Réaliser un dosage conductimétrique & \textcolor{green}{Dosage des ions $SO_4^{2-}$ dans la Contrex} & Terminale ST2S \\
+  \hline
+  \end{tabularx}
+\end{changemargin}
+
+\newpage 
+\begin{changemargin}{-1.5cm}{-0cm}
+  \begin{tabularx}{\paperwidth-2cm}{| X | X | X | X |}
   \hline
   \textbf{Transformations chimiques en solution acqueuse} & Déterminer $K_{eq}$ d'une réaction (A/B, précipitation, redox) & \textcolor{red}{0\%} & MPSI \\
   \hline
@@ -163,9 +171,10 @@ Code couleur pour les manips :\\
   \hline  
 \end{tabularx}
 
-\begin{headerBlock}
+\begin{headerBlock}{Idées en vracs}
 \begin{itemize}
     \item Réaliser l'hydrolyse d'un complexe (leçon biomolécules et énergie - 1ère ST2S)
+    \item Site de l'INRS pour les fiches de sécurité des composés chimiques : \url{https://www.inrs.fr/media.html?refINRS=ED\%206483}
     \item 
 \end{itemize}
 
