--- a/Leçon_chimie/LC_SPCL/LC_DerivesAcides/LC_DerivesAcides.tex
+++ b/Leçon_chimie/LC_SPCL/LC_DerivesAcides/LC_DerivesAcides.tex
@@ -14,6 +14,10 @@ Titre & Auteur(s) & Editeur (année) & ISBN \\ \hline
 Chimie organique: tout en fiche &  Maddaluno et al. &  Dunod &  \\ \hline
 Sources internet pour STL SPCL & ~ &  ~ & ~ \\ \hline
 Techniques expérimentales en chimie & Bernard et al. &  Dunod &  \\ \hline
+\url{https://culturesciences.chimie.ens.fr/thematiques/chimie-organique/methodes-et-outils/les-acides-amines-et-la-synthese-peptidique} & Sur les acides aminés et liaison peptidique & & \\
+\hline
+\url{https://spcl.ac-montpellier.fr/moodle/pluginfile.php/3381/mod_resource/content/6/CH6\%20Syntheses\%20organiques_activite4.pdf} & Pour synthèse Dean-Stark & & \\
+\hline
 \end{tabular}
 \end{center}
 
