--- a/Leçon_chimie/LC_SPCL/LC_ReactionSynthese.tex
+++ b/Leçon_chimie/LC_SPCL/LC_ReactionSynthese.tex
@@ -1,6 +1,6 @@
 \begin{headerBlock}
-\chapter{Reaction de synthèse}
-\label{LC_ReactionSynthese}
+\chapter{Réactions de synthèse, sites électrophiles, nucléophiles, formalisme des flèches courbes}
+\label{LC_ReactionSynthese_SPCL}
  \end{headerBlock}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -14,8 +14,11 @@
 \begin{center}
 \begin{tabularx}{\textwidth}{| X | X | c | c |}\hline
 Titre & Auteur(s) & Editeur (année) & ISBN \\ \hline
- &  &  &  \\ 
+ Chimie PCSI Chap 3 & J-B Baudin & Dunod (2019) &  \\ 
  \hline
+ \url{https://spcl.ac-montpellier.fr/moodle/course/view.php?id=61&section=4} & Académie Montpellier & & \\
+ \hline
+ \url{https://ww2.ac-poitiers.fr/sc_phys/sites/sc_phys/IMG/pdf/stl_bio_physique_chimie.pdf} & Sujet bac pour l'hydrolyse de l'eau dans l'ISS & & \\
 \end{tabularx}
 \end{center}
 
@@ -23,14 +26,14 @@ Titre & Auteur(s) & Editeur (année) & ISBN \\ \hline
 
 \begin{reportBlock}{Plan détaillé}
 
-\underline{Niveau} : 1ère STL-SPCL \\
+\underline{Niveau} : Terminale STL-SPCL \\
 
 \section*{Introduction pédagogique}
 
 
 \paragraph*{Prérequis}
 \begin{itemize}
-\item
+\item 
 \end{itemize}
 \paragraph*{Contexte :}
 
@@ -53,27 +56,10 @@ Titre & Auteur(s) & Editeur (année) & ISBN \\ \hline
 \item 
 \end{itemize}
 
-
 \section*{Introduction }
 
-\section{}
-\subsection{}
+\section{Les biomolécules pour l'organisme}
 
-\begin{itemize}
-    \item 
-\end{itemize}
-
-\subsection{Notion électrophile et nucléophile}
-Définitions et exemple.
-
-\subsection{Formalisme des flèches courbes}
-
-\section{Mise en place d'une synthèse : esterification}
-
-\subsection{Principe du montage à reflux}
-Schéma du montage.
-\textcolor{blue}{Expérience :} Synthèse d'un arome de banane.
-
-\subsection{Mécanisme des flèches courbes appliqué à l'estérifcation}
+\section{Conclusion} 
 
 \end{reportBlock}
