--- a/Leçon_chimie/LC_SPCL/LC_Spectroscopies.tex
+++ b/Leçon_chimie/LC_SPCL/LC_Spectroscopies.tex
@@ -1,6 +1,6 @@
 \begin{headerBlock}
-\chapter{Reaction de synthèse}
-\label{LC_ReactionSynthese}
+\chapter{Techniques spectroscopiques}
+\label{LC_ControleQualite}
  \end{headerBlock}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -14,8 +14,9 @@
 \begin{center}
 \begin{tabularx}{\textwidth}{| X | X | c | c |}\hline
 Titre & Auteur(s) & Editeur (année) & ISBN \\ \hline
- &  &  &  \\ 
+Chimie PCSI Tout-en-un Chap 8 & B. Fosset, J-B Baudin & Dunod (2019) &  \\ 
  \hline
+ 
 \end{tabularx}
 \end{center}
 
@@ -23,7 +24,7 @@ Titre & Auteur(s) & Editeur (année) & ISBN \\ \hline
 
 \begin{reportBlock}{Plan détaillé}
 
-\underline{Niveau} : 1ère STL-SPCL \\
+\underline{Niveau} : Terminale ST2S \\
 
 \section*{Introduction pédagogique}
 
@@ -55,25 +56,14 @@ Titre & Auteur(s) & Editeur (année) & ISBN \\ \hline
 
 
 \section*{Introduction }
+\textcolor{blue}{Manip qualitative : prendre une masse reliée à un ressort. Si j'agite trop lentement ou trop rapidement, le ressort de se tend pas. Si j'agite à la bonne fréquence, il y a une élongation maximale : résonance.}
 
-\section{}
-\subsection{}
+\section{Spectroscopie IR}
+Mettre loi de Planck, états vibratoires de la molécule. Faire le lien avec la manip qualitative. Spectre typique IR, ordre de grandeur des énergies des états vibratoires des liaisons.
 
-\begin{itemize}
-    \item 
-\end{itemize}
+\section{Spectroscopie visible}
+Loi de Beer-Lambert, faire la manip 
 
-\subsection{Notion électrophile et nucléophile}
-Définitions et exemple.
-
-\subsection{Formalisme des flèches courbes}
-
-\section{Mise en place d'une synthèse : esterification}
-
-\subsection{Principe du montage à reflux}
-Schéma du montage.
-\textcolor{blue}{Expérience :} Synthèse d'un arome de banane.
-
-\subsection{Mécanisme des flèches courbes appliqué à l'estérifcation}
+\section{Spectroscopie RMN}
 
 \end{reportBlock}
