--- a/main.tex
+++ b/main.tex
@@ -137,7 +137,7 @@
 \newpage
 \include{LP_Resonance/LP_Resonance}
 \newpage 
-\include{LP_PortaitPhase.tex}
+\include{LP_PortaitPhase/LP_PortaitPhase.tex}
 \newpage
 \include{LP_CinematiqueRelativiste}
 \newpage
@@ -148,6 +148,8 @@
 \input{Leçon_chimie/LC_Avancement.tex}
 \newpage
 \input{Leçon_chimie/LC_Eau.tex}
+\newpage
+\input{Leçon_chimie/LC_ST2S/LC_ControlequaliteEauAir}
 \newpage
 \input{Leçon_chimie/LC_SPCL/LC_Solubilite.tex}
 \newpage
