Updates from Overleaf

--- a/Leçon_chimie/LC_Avancement.tex
+++ b/Leçon_chimie/LC_Avancement.tex
@@ -39,20 +39,12 @@ Code couleur pour les manips :
   \hline
   \textbf{Solvants et solubilité} & Etudier facteur influençant la solubilité & \textcolor{red}{\textbf{0\%}}  & 1ère STL  \\
   \hline
-  
-  
 \end{tabularx}
 \end{changemargin}
+
 \newpage
+
 \begin{changemargin}{-1.5cm}{0cm}
-
-Code couleur pour les manips :\\
-\begin{center}
-\textcolor{green}{Expérience déjà faite, sur laquelle je suis à l'aise}\\
-\textcolor{yellow}{Retravailler un geste, l'interprétation de l'expérience}\\
-\textcolor{red}{Manip à faire en priorité}\\
-\end{center}
-
 \begin{tabularx}{\paperwidth-2cm}{| X | X | X | X |}
   \hline
   \rowcolor{gray!20}\multicolumn{4}{c}{Avancement préparation oraux Leçons Chimie} \\
@@ -85,8 +77,8 @@ Code couleur pour les manips :\\
 \end{changemargin}
 
 \newpage
+
 \begin{changemargin}{-1.5cm}{-0cm}
-    
 \begin{tabularx}{\paperwidth-2cm}{| X | X | X | X |}
   \hline
   \rowcolor{gray!20}\multicolumn{4}{c}{Avancement préparation oraux Leçons Chimie} \\
@@ -137,13 +129,6 @@ Code couleur pour les manips :\\
 
 \newpage
 \begin{changemargin}{-1.5cm}{-0cm}
-Code couleur pour les manips :\\
-\begin{center}
-\textcolor{green}{Expérience déjà faite, sur laquelle je suis à l'aise}\\
-\textcolor{yellow}{Retravailler un geste, l'interprétation de l'expérience}\\
-\textcolor{red}{Manip à faire en priorité}\\
-\end{center}
-
 \begin{tabularx}{\paperwidth-2cm}{| X | X | X | X |}
   \hline
   \rowcolor{gray!20}\multicolumn{4}{c}{Avancement préparation oraux Leçons Chimie} \\
@@ -171,13 +156,14 @@ Code couleur pour les manips :\\
   \hline  
 \end{tabularx}
 
-\begin{headerBlock}{Idées en vracs}
+\end{changemargin}
+\newpage
+\begin{headerBlock}{\huge{Idées en vracs}}
 \begin{itemize}
-    \item Réaliser l'hydrolyse d'un complexe (leçon biomolécules et énergie - 1ère ST2S)
-    \item Site de l'INRS pour les fiches de sécurité des composés chimiques : \url{https://www.inrs.fr/media.html?refINRS=ED\%206483}
+    \item Pour l'utilisation de la trompe à eau ou de la pompe à vide : briser le vide d'abord, couper l'eau ou l'alimentation de la pompe après
+    \item Site de l'INRS pour les fiches toxicologiques des composés chimiques : \url{https://www.inrs.fr/publications/bdd/fichetox.html}
     \item 
 \end{itemize}
 
 \end{headerBlock}
-\end{changemargin}
 
