--- a/Leçon_chimie/LC_Eau.tex
+++ b/Leçon_chimie/LC_Eau.tex
@@ -86,104 +86,5 @@ Tableau périodique : $\chi(O)>\chi(H)$.\\
 
 \textcolor{green}{Manipulation : dépollution de l'eau :} mélange d'eau et de I$_2$ pour faire passer $I_2$ de l'eau au cyclohexane. Puis extraction liquide-liquide avec une ampoule à décanter.
 
-\section{Conclusion} 
-
-
-\end{reportBlock}
-
-\begin{reportBlock}{Questions posées}
-
-\begin{itemize}
-
-\item 
-\textcolor{purple}{}
-
-\end{itemize}
-
-
-\end{reportBlock}
-
-\begin{reportBlock}{Commentaires}
-
-\end{reportBlock}
-
-
-\begin{reportBlock}{Expérience 1}
-% bloc à dupliquer autant de fois que d'expériences
-
-\underline{Titre} :  \\
-
-\underline{Référence complète} :  \\ 
-
-\underline{But de la manip} : \\
-
-\underline{Commentaire éventuel} : 
-
-\underline{Phase présentée au jury} :\\
-
-\underline{Durée de la manip} : \\
-
-\end{reportBlock}
-
-
-
-\begin{reportBlock}{Expérience 2}
-% bloc à dupliquer autant de fois que d'expériences
-
-\underline{Titre} : 
-
-\underline{Référence complète} :  \\ 
-
-\underline{Équation chimique et but de la manip} : \\
-
-\underline{Phase présentée au jury} :  \\
-
-\underline{Durée de la manip} : \\
-
-\end{reportBlock}
-
-
-\begin{reportBlock}{Expérience 3}
-% bloc à dupliquer autant de fois que d'expériences
-
-\underline{Titre} : \\
-
-\underline{Référence complète} : \\ 
-
-\underline{Équation chimique et but de la manip} :  \\
-
-
-\underline{Commentaire éventuel :} 
-
-\underline{Phase présentée au jury} \\
-
-\underline{Durée de la manip} :  \\
-
-\end{reportBlock}
-
-
-
-\begin{reportBlock}{Compétence \og Autour des valeurs de la République et des thématiques relevant de la laïcité et de la citoyenneté \fg{}}
-
-\underline{Question posée} : \\
-
-\underline{Réponse proposée} : \\ 
-
-\underline{Commentaire du correcteur} : \\
-
-\end{reportBlock}
-
-
-\begin{reportBlock}{Champ libre pour le correcteur}
-% compléments, propositions de manipulation, bibliographie etc.
-
-\paragraph*{Remarques sur le plan}
-
-
-\paragraph*{Vocabulaire}
-
-\paragraph*{Équipements de protection individuelle}
-
-\paragraph*{Autre expérience possible} 
-
+\section*{Conclusion} 
 \end{reportBlock}
