--- a/Leçon_chimie/LC_SPCL/LC_Conductimetrie/LC22_Conductimétrie.tex
+++ b/Leçon_chimie/LC_SPCL/LC_Conductimetrie/LC22_Conductimétrie.tex
@@ -72,7 +72,7 @@ Leçon placée en début d'année de terminale.
 \item Prévoir l'allure $\sigma(V)$ (méthode du tableau)
 \end{itemize}
 
-\section*{Introduction (4'01)}
+\section*{Introduction}
 
 \textbf{Question:} Quelle est la condition pour qu'une solution conduise le courant ?
 
@@ -80,16 +80,16 @@ Leçon placée en début d'année de terminale.
 
 \section{Conductance et conductivité}
 
-\subsection{Conductance}
+\subsection{Définitions}
 
 \paragraph*{Electrolyte} Solution capable de conduire le courant en présence d'ions mobiles. \\
 ex: eau salée \ce{Na^+} et \ce{Cl^-}.
 
 \paragraph*{Conductance} $G = \frac{1}{U} = \frac{1}{R}$. Unité : $S = \Omega^{-1}$ (Siemens). Cette grandeur n'est pas intrinsèque à la solution.
 
-\subsection{Conductivité}
+\subsection{Présentation du condcutimètre}
 
-\paragraph*{Conductivité} Schéma de fonctionnement d'un conductimètre : une cellule de mesure constituée de deux plaques parallèles de surface immergée $S$ et séparées d'une distance $L$. \\
+\paragraph*{Conductivité} Schéma de fonctionnement d'un conductimètre : une \textbf{cellule conductimétrique} constituée de deux plaques parallèles de surface immergée $S$ et séparées d'une distance $L$. \\
 
 \paragraph*{Conductivité}: $\sigma = \frac{G L}{S}$ en $S.m^{-1}$, avec $S$ la surface d'une plaque de la cellule conductimétrique et $L$ la distance entre les deux plaques.
 
