--- a/Leçon_chimie/LC_SPCL/LC_Electrolyse_SPCL.tex
+++ b/Leçon_chimie/LC_SPCL/LC_Electrolyse_SPCL.tex
@@ -61,6 +61,6 @@ Titre & Auteur(s) & Editeur (année) & ISBN \\ \hline
 
 \section{}
 
-\section{Conclusion} 
+\section*{Conclusion} 
 
 \end{reportBlock}
