--- a/Leçon_chimie/LC_SPCL/LC_Diagramme_binaire.tex
+++ b/Leçon_chimie/LC_SPCL/LC_Diagramme_binaire.tex
@@ -12,14 +12,14 @@
 \begin{reportBlock}{Bibliographie}
 
 \begin{center}
-\begin{tabular}{|c|c|c|c|}\hline
+\begin{tabularx}{\textwidth}{| X | X | c | c |}\hline
 Titre & Auteur(s) & Editeur (année) & ISBN \\ \hline
 Tout-en-un Chimie PC/PC* ~ & B. Fosset, J-B. Baudin  ~ & Dunod (2022)~ & ~ \\
 \hline 
 \url{http://vle-calc.com/} & Site sympa pour les diagrammes ~ &  ~ & ~ \\
 \hline
 \url{https://spcl.ac-montpellier.fr/moodle/course/view.php?id=61&section=7} & Académie de Montpellier & Eduscol & ~ \\ \hline
-\end{tabular}
+\end{tabularx}
 \end{center}
 
 \end{reportBlock}
