Updates from Overleaf

--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -7,32 +7,32 @@
   \hline 
   Titre de la leçon & Expériences & Avancement & Commentaires \\
   \hline
-\textbf{Gravitation} p\pageref{LP_Gravitation}  & Pendule simple : mesure de g & \textcolor{yellow}{\textbf{60\%}}  & Reprendre les transitions, partie marées à modifier, rajouter exemples effets de marée dans le système solaire   \\
+\textbf{Gravitation} p\pageref{LP_Gravitation}  & \textcolor{green}{Pendule simple : mesure de g} & \textcolor{yellow}{\textbf{60\%}}  & Reprendre intro, partie marées à modifier, rajouter exemples effets de marée dans le système solaire, limite de Roche à bosser  \\
   \hline 
   \hline
-     \textbf{Lois de conservation en mécanique} p\pageref{LP_LoisConservation} & Conservation de $\mathbf{p}$ mobiles autoporteurs  &  \textcolor{yellow}{\textbf{20\%}}  & Faire manip + plan détaillé \\
+     \textbf{Lois de conservation en mécanique} p\pageref{LP_LoisConservation} & \textcolor{green}{Conservation de E chute bille} & \textcolor{orange}{\textbf{20\%}} & plan détaillé \\
   \hline 
-    \textbf{Notions de viscosité d'un fluide. \'{E}coulements visqueux} p\pageref{LP_Viscosite} &  & \textcolor{red}{\textbf{0\%}} & Plan trop ambitieux, faire démo loi de Stokes dans partie dynamique + faire manip \\
+    \textbf{Notions de viscosité d'un fluide. \'{E}coulements visqueux} p\pageref{LP_Viscosite} & \textcolor{green}{Détermination de $\eta_{silicone}$ par la chute des billes}  & \textcolor{orange}{\textbf{30\%}} & Plan trop ambitieux, faire démo loi de Stokes dans partie dynamique + faire manip \\
   \hline 
-  \textbf{Modèle de l'écoulement parfait d'un fluide} p\pageref{LP_EcoulementParfait} & Mesure $\rho_{air}$ sonde Pitot + anémomètre & \textcolor{red}{\textbf{0\%}} & Manip à faire \\
+  \textbf{Modèle de l'écoulement parfait d'un fluide} p\pageref{LP_EcoulementParfait} & \textcolor{green}{Mesure $\rho_{air}$ sonde Pitot + anémomètre} & \textcolor{green}{\textbf{100\%}} & Bien revoir couches limites \\
   \hline
-  \textbf{Phénomènes interfaciaux impliquant des fluides} p\pageref{LP_PhenomenesInterfaciaux} & Loi de Jurin - loi de Laplace - expériences quali bulles savon & \textcolor{yellow}{\textbf{60\%}} & Plan leçon Lydia super, à s'approprier\\
+  \textbf{Phénomènes interfaciaux impliquant des fluides} p\pageref{LP_PhenomenesInterfaciaux} & \textcolor{green}{Loi de Laplace - expériences quali bulles savon }& \textcolor{green}{\textbf{80\%}} & Transition gravité-mouillage \\
   \hline 
   \hline
   \textbf{Premier principe de la thermodynamique} p\pageref{LP_PremierPrincipe} & \textcolor{orange}{Mesure $c_{fer}$ dans calorimètre} - \textcolor{red}{Expérience Joule} & \textcolor{orange}{\textbf{50\%}} & Leçon Lydia a bien marché \\
   \hline 
-  \textbf{Transitions de phase} p\pageref{LP_TransitionPhase} & \textcolor{red}{Mesure chaleur latente de l'eau/azote} & \textcolor{red}{\textbf{20\%}} & \\
+  \textbf{Transitions de phase} p\pageref{LP_TransitionPhase} & \textcolor{green}{Mesure chaleur latente de l'eau} & \textcolor{red}{\textbf{20\%}} & \\
   \hline 
-  \textbf{Phénomènes de transport} p\pageref{LP_Transport} & Diffusion du glycérol dans l'eau (TP fluide et capillarité) & \textcolor{green}{\textbf{80\%}} & à répéter\\
+  \textbf{Phénomènes de transport} p\pageref{LP_Transport} & \textcolor{green}{Diffusion du glycérol dans l'eau} & \textcolor{green}{\textbf{80\%}} & à répéter\\
   \hline 
   \hline
-  \textbf{Conversion de puissance électromécanique} p\pageref{LP_ConversionPuissance} & Etude MCC (résistance, rendement, ...) & \textcolor{yellow}{\textbf{60\%}} & Finir moteur synchrone\\
+  \textbf{Conversion de puissance électromécanique} p\pageref{LP_ConversionPuissance} & \textcolor{green}{Etude MCC (résistance, rendement, ...)} & \textcolor{yellow}{\textbf{60\%}} & Finir moteur synchrone\\
   \hline 
   \textbf{Induction électromagnétique} p\pageref{LP_Induction} & Mesure inductance circuit LC + aimant & \textcolor{red}{\textbf{0\%}} & Leçon Lydia assez complet\\
   \hline
-  \textbf{Rétroaction et oscillations} p\pageref{LP_RetroactionOscillation} & Quali : moteur asservi. Quanti : Pont de Wien & \textcolor{red}{\textbf{0\%}} & \\
+  \textbf{Rétroaction et oscillations} p\pageref{LP_RetroactionOscillation} & \textcolor{red}{Quali : MCC asservi.}, \textcolor{yellow}{Quanti : Pont de Wien} & \textcolor{red}{\textbf{0\%}} & \\
   \hline
-  \textbf{Traitement d'un signal. Étude spectrale} p\pageref{LP_TraitementSignal} & Filtre RC et démodulation par détection synchrone & \textcolor{yellow}{\textbf{60\%}} & Finir partie 3\\
+  \textbf{Traitement d'un signal. Étude spectrale} p\pageref{LP_TraitementSignal} & \textcolor{green}{Filtre RC et démodulation par détection synchrone} & \textcolor{yellow}{\textbf{60\%}} & Finir partie 3\\
   \hline
 \end{tabularx}
 \end{center}
@@ -44,31 +44,31 @@
   \hline
   \textbf{Ondes acoustiques} p\pageref{LP_OndeAcoustique}~& ?? Mesure $c_{air}$ piézo ?? & \textcolor{red}{\textbf{0\%}} &  \\
   \hline
-  \textbf{Propagation guidée des ondes} p\pageref{LP_PropagationGuidee} & \textcolor{green}{Quali : piezo + tube}, \textcolor{red}{Quanti : guide d'onde centi}& \textcolor{red}{\textbf{0\%}} & \\
+  \textbf{Propagation guidée des ondes} p\pageref{LP_PropagationGuidee} & \textcolor{green}{Quali : piezo + tube}, \textcolor{green}{Quanti : guide d'onde centi}& \textcolor{green}{\textbf{80\%}} & Ouverture à finir + Pertes et ROS à regarder. \\
   \hline
-  \textbf{Microscopies optiques} p\pageref{LP_Microscopie}~& \textcolor{yellow}{Microscope maison, mesure grandissement}~& \textcolor{red}{\textbf{0\%}} &  \\
+  \textbf{Microscopies optiques} p\pageref{LP_Microscopie}~& \textcolor{green}{Microscope maison, mesure grandissement}~& \textcolor{red}{\textbf{0\%}} &  \\
   \hline
   \textbf{Interférences à deux ondes en optique} p\pageref{LP_InterferencesDeuxOndes}~& Mesure largeur fentes d'Young & \textcolor{orange}{\textbf{40\%}} & Plan à revoir en détail\\
   \hline
-  \textbf{Interférométrie à division d'amplitude} p\pageref{LP_DivisionAmplitude} & Michelson : doublet sodium & \textcolor{green}{\textbf{100\%}} & A revoir vite fait coin d'air \\
+  \textbf{Interférométrie à division d'amplitude} p\pageref{LP_DivisionAmplitude} & \textcolor{green}{Michelson : doublet sodium} & \textcolor{green}{\textbf{100\%}} & A revoir vite fait coin d'air \\
   \hline
-  \textbf{Diffraction de Fraunhofer} p\pageref{LP_DiffractionFraunhofer} & \textcolor{red}{Diffraction par une fente+CCD/Filtrage spatial }& \textcolor{orange}{\textbf{30\%}} &  \\
+  \textbf{Diffraction de Fraunhofer} p\pageref{LP_DiffractionFraunhofer} & \textcolor{red}{Diffraction par une fente+CCD-MHTEX/Filtrage spatial }& \textcolor{orange}{\textbf{30\%}} &  \\
   \hline
   \textbf{Diffraction par des structures périodiques} p\pageref{LP_DiffractionPeriodique} & \textcolor{red}{Diffraction par un réseau} & \textcolor{red}{\textbf{0\%}} &  \\
   \hline
   \textbf{Absorption et émission de la lumière} p\pageref{LP_Absorption} & \textcolor{yellow}{Corps noir ?} & \textcolor{red}{\textbf{0\%}} & Leçon Elric pas mal \\
   \hline
   \hline
-  \textbf{Propriétés macroscopiques des corps ferromagnétiques } p\pageref{LP_Ferromagnetisme} & Cycle hystérésis transfo & \textcolor{green}{\textbf{90\%}} & Mettre en relief appli ferro durs/doux + démo confinement lignes de champ slides \\
+  \textbf{Propriétés macroscopiques des corps ferromagnétiques } p\pageref{LP_Ferromagnetisme} & \textcolor{green}{Cycle hystérésis transfo} & \textcolor{green}{\textbf{90\%}} & Mettre en relief appli ferro durs/doux + démo confinement lignes de champ slides \\
   \hline
-  \textbf{Mécanismes de la conduction électrique dans les solides} p\pageref{LP_Conduction} & \textcolor{red}{Mesure conductivité cuivre vs T} & \textcolor{yellow}{\textbf{50\%}} & Transitions délicates, revoir partie 1 \\
+  \textbf{Mécanismes de la conduction électrique dans les solides} p\pageref{LP_Conduction} & \textcolor{green}{Mesure conductivité cuivre vs T} & \textcolor{yellow}{\textbf{50\%}} & Transitions délicates, revoir partie 1 \\
   \hline
-  \textbf{Phénomènes de résonance dans différents domaines de la physique} p\pageref{LP_resonance} & Détermination couplage mutuel circuits RLC couplés & \textcolor{yellow}{\textbf{40\%}} & Plan à détailler  \\
+  \textbf{Phénomènes de résonance dans différents domaines de la physique} p\pageref{LP_resonance} & \textcolor{green}{Résonance en tension sur la capacité du circuit RLC + couplage mutuel circuits RLC couplés} & \textcolor{yellow}{\textbf{40\%}} & Plan à détailler  \\
   \hline
-  \textbf{Oscillateurs ; portraits de phase et non-linéarités} p\pageref{LP_PortaitPhase}~& quanti : Pendule Borda, quali : portait de phase & \textcolor{red}{\textbf{0\%}} & Leçon Basile pour ref  \\
+  \textbf{Oscillateurs ; portraits de phase et non-linéarités} p\pageref{LP_PortaitPhase}~& \textcolor{yellow}{Borda sur le pendule + portait de phase} & \textcolor{red}{\textbf{0\%}} & Leçon Basile pour ref  \\
   \hline
   \hline
-  \textbf{Cinématique relativiste. Expérience de Michelson et Morley} p\pageref{LP_CinematiqueRelativiste} & logiciel Gum\_MC, exp Frish et Smith & \textcolor{yellow}{\textbf{20\%}} & Plan ok, manip à bosser  \\
+  \textbf{Cinématique relativiste. Expérience de Michelson et Morley} p\pageref{LP_CinematiqueRelativiste} & \textcolor{red}{logiciel Gum\_MC, exp Frish et Smith} & \textcolor{red}{\textbf{20\%}} & Plan ok, manip à bosser  \\
   \hline
   \textbf{Effet tunnel : application à la radioactivité alpha} & \textcolor{green}{Simulation site colorado}& \textcolor{green}{\textbf{80\%}} & Faire tableau avec $T_{1/2}$ et E. Interprétation $T_{1/2}$ avec particule à travailler. \\
   \hline
