--- a/LP_CinematiqueRelativiste.tex
+++ b/LP_CinematiqueRelativiste.tex
@@ -26,6 +26,7 @@
   \hline
   \url{http://blog.ac-versailles.fr/profbcasanova/public/TS4_phychim/P8_muons-2014.pdf} & & & \\
   \hline
+  Mécanique 1 (Chap 15) & H. Gié et J.-P. Sarmant & Tec\&Doc (1984) & \\
 \end{tabularx}
 \end{center}
 
@@ -36,6 +37,7 @@
   \textbf{Prérequis : }
   \newline
 
+\section*{}
 
 \section{Emergence de la relativité restreinte}
 
@@ -46,7 +48,7 @@ Montrer les résultats de l'expérience de Michelson et Morlay (Michelson et Mor
 
 \subsection{Postulat d'Einstein}
 
-\section{Changement de référentiel}
+\section{Changement de référentiel relativiste}
 
 \subsection{Evènements}
 
