--- a/LP_EffetTunnel.tex
+++ b/LP_EffetTunnel.tex
@@ -14,7 +14,7 @@
   \hline 
   Titre & Auteurs & Editeur (année) & ISBN \\
   \hline
-  Reflexion totale frustrée & Polycopié de Jean Hare &  & \\
+  Reflexion totale frustrée & Polycopié de Jean Hare + Perez EM p581 &  & \\
   \hline
   Tout-en-un PC/PC* & M.-N. Sanz & Dunod & \\
   \hline
