--- a/LP_OndesAcoustiques/LP_OndeAcoustique.tex
+++ b/LP_OndesAcoustiques/LP_OndeAcoustique.tex
@@ -23,6 +23,10 @@
   \hline 
   Ondes H-prépa & J-M Brébec & Hachette (2004) & \\
   \hline
+  \url{https://dropsu.sorbonne-universite.fr/s/nyD9Ppz3kH6BHZE} & Clément Sayrin & & \\
+  \hline
+  Ondes acoustiques & A. Chaigne & Ecole Polytechnique (2011) & \\
+  \hline
 \end{tabularx}
 \end{center}
 
