--- a/LP_OndesProgressives/LP_OndeProgressive.tex
+++ b/LP_OndesProgressives/LP_OndeProgressive.tex
@@ -25,6 +25,7 @@
   \hline 
   Ondes H-prépa & J-M Brébec & Hachette (2004) & \\
   \hline
+  \url{https://dropsu.sorbonne-universite.fr/s/nyD9Ppz3kH6BHZE} & Clément Sayrin & & \\
 \end{tabularx}
 \end{center}
 
@@ -54,24 +55,26 @@
   
   Donner les équations couplant $y(x,t)$ et $T(x,t)$ (p32) en disant que le phénomène de propagation est contenue dans ces équations liant vitesse transverse $\fracD{y}{t}$ et la projection de la tension suivant $\mathbf{\hat{u_y}}$.\\
 
-  \textcolor{red}{Transition : Ce couplage entre deux grandeurs rappelle celui celui de la tension et du courant. On peut en réalité faire l'analogie dans un câble coaxial.}
+  \textcolor{red}{Transition : Ce couplage entre deux grandeurs rappelle celui de la tension et du courant. On peut effectivement faire l'analogie de la propagation de U et i dans un câble coaxial avec la tension et la déformation de la corde.}
 
   \subsection{Analogie électrocinétique : le câble coaxial} 
-  Voir HPrépa p58. Faire le schéma d'un câble coaxial avec âme et gaine et le schéma électriue équivalent.\\
+  Voir HPrépa p58. \textcolor{blue}{Prendre câble coaxial, montrer l'âme et la gain et le diélectrique}. Faire le schéma d'un câble coaxial avec âme et gaine et le schéma électriue équivalent.\\
   \textbf{Hypothèses :} On ne se place plus dans l'ARQS pour le câble tout entier car on veut voir des phénomènes de propagation mais on peut le découper en tronçons dans lesquels la propagation est négligeable. \\
   
   Obtenir les équations couplées (loi des mailles et loi des n\oe uds) et obtenir l'équation de d'Alembert unidimentionnelle.\\
+  \textcolor{blue}{Manip quantitative : mesure de la vitesse de propagation de i ou u dans le câble coaxial avec un câble de 100m de long. Envoyer un pulse d'impulsion 100ns, montrer le décalage sur la voie Y et mesurer ce décalage avec les curseurs. On obtient $v=\frac{2c}{3}$. On peut en déduire $n=\frac{v}{c}=\sqrt{\epsilon_r}$}.
 
   Définir la notion d'onde (poly Thibierge p10) : \og Une onde correspond à la propagation d’une perturbation à travers un milieu. Cette perturbation est générée par une source, qui apporte de l’énergie au milieu. L'existence de deux grandeurs couplées qui se créent l'une l'autre est à la base du phénomène de propagation.\\
 
   Dans le cas de la corde, une personne à mis en mouvement la corde. Dans le cas de la ligne, un expérimentateur a décidé de mettre un GBF. Dans le cas de la olà, un groupe de personne déclanche ce phénomène. Dans le cas de la goutte d'eau, un robinet qui fuit a amené de l'eau au milieu.\\
 
-  \textcolor{red}{On a décrit le phénomène de propagation, maintenant on va }
-  
   \textcolor{green}{Slide : tableau analogie}
   
+  \textcolor{red}{On a décrit le phénomène de propagation comme l'existence de deux grandeurs couplées qui se propagent dans un milieu. On va maintenant voir la forme des solutions de l'équation de d'Alembert.}
+  
+  
 
-  \section{Onde progressive}
+  \section{Ondes progressives}
   \subsection{Solution de l'équation de d'Alembert unidimentionnelle}
   A voir si on a le temps de la démontrer.
   
@@ -83,12 +86,13 @@
   Obtenir la relation de dispersion. Définir vitesse de phase et vitesse de groupe. 
   
   \section{Onde stationnaire}
+  On peut imaginer une onde progressive et une onde regressive qui se propagent et qui se rencontrent. 
   
 
   \subsection{Corde de Melde}
 
   \section{Conclusion}
-  Conclure sur absorption, dispersion. Prendre exemple Dunod p818 en introduisant une force de frottement.
+  Conclure sur absorption, dispersion, impédance. Prendre exemple Dunod p818 en introduisant une force de frottement.
 
 
 \end{reportBlock}
