--- a/LP_TensionSurface/LPF3_Tension_surface.tex
+++ b/LP_TensionSurface/LPF3_Tension_surface.tex
@@ -77,7 +77,7 @@ L'étude des phénomènes interfaciaux permet de répondre à un certain nombre 
   
   Permet de répondre à pourquoi le geris peut marcher sur l'eau: les pattes hydrophobes du gerris déforment la surface de l'eau (cf clément Santamaria p60) qui va chercher à retrouver sa forme en appliquant une force capillaire sur les pattes. Comme l'insecte est suffisamment léger, la force arrive à compenser le poids. \\
 
-  \textcolor{red}{Transition : On a vu l'exemple des surfaces planes, on va s'intéresser à présent aux interfaces courbes.}
+  \textcolor{red}{Transition : On a vu l'exemple des surfaces planes, on va s'intéresser à présent aux interfaces courbes et on va se poser la question : la pression dans une petite bulle est-elle plus grande ou plus petite que dans une grande bulle ,}
   
  \section{Pression et tension de surface}
  
@@ -88,7 +88,7 @@ L'étude des phénomènes interfaciaux permet de répondre à un certain nombre 
      
  \end{center}
  La différence de pression avec l'extérieur est donc plus grande dans les petites bulles : on peut le démontrer mathématiquement via la \textbf{Loi de Laplace.}
- Pour cela, on applique le principe des travaux virtuels. On imagine qu'on accroît le rayon de la bulle de $dR$ sous une différence de pression $\Delta P = P_1-P_2$ constante. La valeur de $\Delta P$ correspondant à l'équilibre mécanique sera telle que la variation d'énergie totale $d\delta W_{tot}$ correspondante est nulle. Celle-ci est la somme du :
+ Pour cela, on applique le principe des travaux virtuels. On imagine qu'on accroît le rayon de la bulle de $dR$ sous une différence de pression $\Delta P = P_1-P_2$ constante. La valeur de $\Delta P$ correspondant à l'équilibre mécanique sera telle que la variation d'énergie totale $\delta W_{tot}$ correspondante est nulle. Celle-ci est la somme du :
  \begin{enumerate}
      \item travail des forces de pression $\delta W_p = -(P_1-P_2)d(\frac{4}{3}\pi R^3)$
      \item la variation d'énergie de surface de la sphère : $\delta W_s = 2d(4\pi R^2\gamma)$, le facteur 2 correspond au fait qu'il y a deux interfaces pour une bulle.
@@ -102,7 +102,7 @@ L'étude des phénomènes interfaciaux permet de répondre à un certain nombre 
      \item Plus $R$ est petit, plus la pression à l'intérieur est grande. 
      \item Lorsque $R \rightarrow \infty$ (surface plane), on a continuité de la pression.
      \item Cette loi nous permet de mesurer $\gamma$ expérimentalement.
-     \item Remarque : pour une gouute, il y a 1 interface liquide-air donc $(P_1-P_2)=\frac{2\gamma}{R})$
+     \item Remarque : pour une goutte, il y a 1 interface liquide-air donc $(P_1-P_2)=\frac{2\gamma}{R})$
  \end{itemize}
  
  \subsection{Mesure de $\gamma_{savon-air}$}
@@ -118,7 +118,7 @@ Faire la démo.
 Insister sur le caractère algébrique de R' et R". \textcolor{green}{Slide : Film de savon entre deux anneaux.}
 Faire un schéma bulle normale, bulle caténoïde Pour la caténoïde, $\frac{1}{R}=-\frac{1}{R'}$ ce qui permet de satisfaire la loi de Laplace en tout point de l'interface dans le cas ou les pressions sont égales de part et d'autre.\\
 
-\textcolor{red}{Transition : ce qu'on a vu dans cette partie c'est que les effets de capillarité sont directement reliés à la courbure des interfaces pour des petits objets. Mais pour des gros objets, il y a des effets de gravité qui s'ajoutent.}
+\textcolor{red}{Transition : ce qu'on a vu dans cette partie c'est que les effets de capillarité sont directement reliés à la courbure des interfaces pour des petits objets. Mais pour des gros objets, il y a des effets de gravité qui s'ajoutent ce qu'on a vu dans l'expérience avec les bulles de savon.}
 
   \section{Influence de la gravité}
   
@@ -147,7 +147,7 @@ Faire un schéma bulle normale, bulle caténoïde Pour la caténoïde, $\frac{1}
       \item Si $l_c>>R$, alors les effets gravitaires sont dominants,
       \item Si $B_O<<1$, l
   \end{itemize}
-  Compétition entre gravité et tension de surface : $B_0=\frac{\rho R^2g}{\gamma}$. La longueur capillaire $l_c$ est telle que: $B_0=\frac{\rho l_c^2g}{\gamma}=1$ (frontière entre les deux régime), soit $l_c = \sqrt{\frac{\gamma}{\rho g}}$.
+  Compétition entre gravité et tension de surface : $B_0=\frac{\rho R^2g}{\gamma}$. La longueur capillaire $l_c$ est telle que: $B_0=\frac{\rho l_c^2g}{\gamma}=1$ (frontière entre les deux régimes), soit $l_c = \sqrt{\frac{\gamma}{\rho g}}$.
   Pour l'eau, $l_c=3$mm.\\
   Deux régimes : 
   \begin{itemize}
