--- a/Leçon_chimie/LC_Avancement.tex
+++ b/Leçon_chimie/LC_Avancement.tex
@@ -162,7 +162,7 @@ Code couleur pour les manips :
 \begin{itemize}
     \item Pour l'utilisation de la trompe à eau ou de la pompe à vide : briser le vide d'abord, couper l'eau ou l'alimentation de la pompe après
     \item Site de l'INRS pour les fiches toxicologiques des composés chimiques : \url{https://www.inrs.fr/publications/bdd/fichetox.html}
-    \item 
+    \item \url{https://chem-file.sourceforge.net/data/formula_index_fr.html} : site pour les représentations de molécules sur AVOGADRO
 \end{itemize}
 
 \end{headerBlock}
