--- a/main.tex
+++ b/main.tex
@@ -55,7 +55,7 @@
 \newcommand{\partialD}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\timeCode}[1]{\textit{#1}\bigskip}
 \newcommand{\Int}{\displaystyle\int}
-\newcommand{\grad}{\Vec{\mathrm{grad}}}
+\newcommand{\grad}{\mathbf{\mathrm{grad}}}
 \newcommand{\Frac}[2]{\displaystyle\frac{#1}{#2}}
 \newcommand{\vecb}[1]{\mathbf {#1}}
 \newcommand{\sinc}{\mathrm{sinc}}
@@ -95,7 +95,7 @@
 \newpage
 \input{LP_Viscosite.tex}
 \newpage
-\input{LP_EcoulementParfait}
+\input{LP_EcoulementsParfaits/LP_EcoulementParfait.tex}
 \newpage
 \input{LP_TensionSurface/LPF3_Tension_surface.tex}
 \newpage
@@ -174,4 +174,6 @@
 \input{Leçon_chimie/LC_GestionRisqueLabo.tex}
 \newpage
 \input{Leçon_chimie/LC_STI2D/LC_Oxydroreduction.tex}
+\newpage
+\input{Leçon_chimie/LC_MPSI/LC_Metaux.tex}
 \end{document}
